Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -19,25 +19,24 @@ div {
   color: #fff;
   padding: 0.4em  0.75em 0.3em;
   border-radius: 8px;
-  border-width: 3px;
+  border: 3px solid;
   text-decoration: none;
 }
 
 .btn-subtle {
   background-color: #ccc;
-  color:#fff;
+  color: #fff;
 }
 
 .btn-ghost {
   background-color: #fff;
-  color:#000;
-  border: 3px solid;
+  color: #000;
   border-color: #000;
 }
 
 .btn-warning {
   background-color: #f33;
-  color:#fff;
+  color: #fff;
 }
 
 .btn-small {
